tests/baselines/reference/logicalNotOperatorWithBooleanType.errors.txt
logicalNotOperatorWithBooleanType.ts(21,25): error TS2869: This expression is always truthy. Did you mean to test something else?
logicalNotOperatorWithBooleanType.ts(36,1): error TS2695: Left side of comma operator is unused and has no side effects.


==== logicalNotOperatorWithBooleanType.ts (2 errors) ====
    // ! operator on boolean type
    var BOOLEAN: boolean;
    
    function foo(): boolean { return true; }
    
    class A {
        public a: boolean;
        static foo() { return false; }
    }
    module M {
        export var n: boolean;
    }
    
    var objA = new A();
    
    // boolean type var
    var ResultIsBoolean1 = !BOOLEAN;
    
    // boolean type literal
    var ResultIsBoolean2 = !true;
    var ResultIsBoolean3 = !{ x: true, y: false };
                            ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
    
    // boolean type expressions
    var ResultIsBoolean4 = !objA.a;
    var ResultIsBoolean5 = !M.n;
    var ResultIsBoolean6 = !foo();
    var ResultIsBoolean7 = !A.foo();
    
    // multiple ! operators
    var ResultIsBoolean = !!BOOLEAN;
    
    // miss assignment operators
    !true;
    !BOOLEAN;
    !foo();
    !true, false;
    ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    !objA.a;
    !M.n;